src/ui/readarr_ui/root_folders/snapshots/managarr__ui__readarr_ui__root_folders__root_folders_ui_tests__tests__snapshot_tests__distinct_root_folders_DeleteRootFolderPrompt.snap
---
source: src/ui/readarr_ui/root_folders/root_folders_ui_tests.rs
expression: output
---
─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
   Path                                                                                            Free Space                        Unmapped Folders                
=> /nfs/books                                                                                      204800.00 GB                      0                               
   /nfs/audiobooks                                                                                 1024.00 GB                        3                               
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                   ╭──────────────────  Delete Root Folder  ───────────────────╮                                                     
                                                   │      Do you really want to delete this root folder:       │                                                     
                                                   │                        /nfs/books?                        │                                                     
                                                   │                                                           │                                                     
                                                   │                                                           │                                                     
                                                   │                                                           │                                                     
                                                   │                                                           │                                                     
                                                   │                                                           │                                                     
                                                   │                                                           │                                                     
                                                   │                                                           │                                                     
                                                   │                                                           │                                                     
                                                   │                                                           │                                                     
                                                   │                                                           │                                                     
                                                   │                                                           │                                                     
                                                   │╭────────────────────────────╮╭───────────────────────────╮│                                                     
                                                   ││             Yes            ││            No             ││                                                     
                                                   │╰────────────────────────────╯╰───────────────────────────╯│                                                     
                                                   ╰───────────────────────────────────────────────────────────╯
